# Android_jni_OpenGL_Draw

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/milk/demo4/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/shader/: fs.glsl  vs.glsl
app/src/main/cpp/: RendererJNI.cpp  RendererJNI.h  native-lib.cpp
app/src/main/java/com/milk/demo4/: MainActivity.java  MilkService.java  RendererJNI.java
app/src/main/res/layout/: milk_glsurfaceview.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/milk/demo4/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
